--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   http: ^1.3.0
   google_maps_flutter: ^2.12.0
   location: ^5.0.3
@@ -44,7 +46,7 @@ dependencies:
   shared_preferences: ^2.5.2
   permission_handler: ^11.4.0
   flutter_local_notifications: ^19.0.0
-  intl: ^0.20.2
+  intl: 0.19.0
   share_plus: ^10.1.4
   pdf: ^3.11.3
   excel: ^4.0.6
