--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
     sdk: flutter
   http: ^1.3.0
   google_maps_flutter: ^2.12.0
-  location: ^5.0.3
+  location: 8.0.0
   audioplayers: ^5.2.1
 
   # The following adds the Cupertino Icons font to your application.
